# mpl-inscription

./: .gitignore  CONTRIBUTING.md  README.md
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml  deploy-programs.yml
clients/cli/: index.ts  output1.json  package.json  pnpm-lock.yaml  tsconfig.json  utils.ts
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/src/: associatedInscription.ts  index.ts  initialize.ts  initializeFromMint.ts  inscription.ts  mintInscription.ts  plugin.ts
clients/js/test/: _setup.ts  append_value.test.ts  authority.test.ts  benchmark.test.ts  clearData.test.ts  createShard.test.ts  (+8 more)
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: mpl_inscription.json  mpl_inscription_program.json  mpl_json.json
programs/inscription/: Cargo.toml  README.md
programs/inscription/src/: entrypoint.rs  error.rs
programs/inscription/src/instruction/: mod.rs
programs/inscription/src/processor/: allocate.rs  create_shard.rs  initialize.rs  initialize_from_mint.rs  mod.rs  set_mint.rs  write_data.rs
programs/mpl-inscription/: Cargo.toml
programs/mpl-inscription/src/: error.rs  lib.rs  state.rs
programs/mpl-inscription/src/instruction/: mod.rs
programs/mpl-inscription/src/processor/: add_authority.rs  allocate.rs  clear_data.rs  close.rs  create_shard.rs  delegate.rs  initialize.rs  initialize_associated_inscription.rs  initialize_from_mint.rs  mod.rs  remove_authority.rs  set_mint.rs  write_data.rs
programs/mpl-json/: Cargo.toml
(+25 files in other folders)
