[package]
name = "mpl-inscription"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "0.3.0"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "~1.16"
thiserror = "^1.0"
mpl-utils = "0.3.1"
serde_json = { version = "1.0.108", features = ["std"]}